[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core<4,>=3.2",
]

[project]
name = "qmaps"
readme = "readme.md"
license = {file = "LICENSE"}
authors = [{name = "Dobatymo", email = "Dobatymo@users.noreply.github.com"}]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "description",
  "version",
]
dependencies = [
  "importlib-resources",
]
[project.optional-dependencies]
qt5 = [
  "PySide2>=5.14",
]
qt6 = [
  "PySide6>=6.6",
]
[project.urls]
Home = "https://github.com/Dobatymo/qmaps"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[tool.bandit]
skips = ["B101"]

[dependency-groups]
dev = [
    "genutility[test]>=0.0.100",
    "pytest>=8",
]
